Fix: Align error messages to the left

--- a/nhs-supplier-form-react/src/index.css
+++ b/nhs-supplier-form-react/src/index.css
@@ -496,6 +496,7 @@ textarea.error,
   /* These should not affect the input above */
   position: relative;
   width: auto;
+  text-align: left !important;
 }
 
 .error-message::before {
